Ensure text remains visible during webfont load

--- a/_sass/cevi_zh11/fonts.scss
+++ b/_sass/cevi_zh11/fonts.scss
@@ -5,6 +5,7 @@
   src: url(/_template_assets/fonts/delicious_roman.otf);
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
   src: url(/_template_assets/fonts/delicious_bold.otf);
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -19,6 +21,7 @@
   src: url(/_template_assets/fonts/delicious_italic.otf);
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 
 
